Reduzir o número de requisições de repositórios.

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <div class="section-header">
                 <h2>Repositórios</h2>
 
-                <button id="show-repos">Mostrar por página:</button>
-                <input id="results-number" type="text" maxlength="2">
+                <button id="show-repos">Por página:</button>
+                <input id="results-number" type="text" maxlength="2" inputmode="numeric">
             </div>
 
             <div class="section-header" id="filter-header">
